# jats

./: .gitignore  README.MD  update_fixtures.js
python/: pyproject.toml
python/agentable/: __init__.py  manager.py  migrate.py  models.py  tools.py
python/jats/: __init__.py  manager.py  migrate.py  models.py  tools.py
python/tests/: test_fixtures.py  test_manager.py  test_tools.py
spec/fixtures/invalid/: agentable_bad_type.table.json  agentable_missing_version.table.json  jats_bad_type.table.json  jats_missing_version.table.json
spec/fixtures/valid/: agentable_full_1.0.table.json  agentable_minimal_1.0.table.json  jats_full_1.0.table.json  jats_minimal_1.0.table.json
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/src/: agent.ts  index.ts  manager.ts  migrate.ts  schema.ts  utils.ts
ts/src/migrations/: upgrade_v0.1.ts
ts/tests/: agent.test.ts  fixtures.test.ts  manager.test.ts
